[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralkappa"
version = "0.1.0"
description = "Rate-independent irregularity metrics for neural spiking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["neuralkappa*"]
exclude = ["demo_output*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
